# pstrudel

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  configure.ac  install_prerequisites.sh  version.h.in
cmake/Modules/: CreateProjectSourceIdentificationCXX.cmake  DisableInSourceBuild.cmake  FindNCL.cmake  GetGitRevisionDescription.cmake  ListFilter.cmake  TrackGitRevision.cmake  TrackGitRevision.cmake.in
ncl/: CMakeLists.txt
ncl/ncl/.svn/: all-wcprops  entries
src/: CMakeLists.txt  Makefile.am  basic_tree.hpp  character.cpp  pairwise_distance_tree.hpp  profile.hpp  pstrudel-trees.cpp  pstrudel.hpp  split.cpp  split.hpp  symmetric_difference_tree.cpp  symmetric_difference_tree.hpp
src/pstrudel/: CMakeLists.txt  basic_tree.hpp  character.cpp  character.hpp  dataio.hpp  distancetree.cpp  distancetree.hpp  echo_pstrudel_info.sh  pairwise_distance_tree.cpp  pairwise_distance_tree.hpp  profile.cpp  profile.hpp  pstrudel-trees.cpp  pstrudel.hpp  pstrudel_trees_main.cpp  pstrudel_trees_refdist_main.cpp  split.hpp  symmetric_difference_tree.cpp  symmetric_difference_tree.hpp  treeshape.cpp  treeshape.hpp
test/: CMakeLists.txt  Makefile.am
test/data/general/: primates.beast.mcmc.trees  smdist.tre
test/data/trees/basic-patterns/: n06-rooted-patterns.nex
test/data/trees/general/: n08-canonical.newick  n10-rooted-patterns.nex  n10-unbalanced.newick.trees  n10-unbalanced.nexus.trees  pythonidae.mb.run1.t  pythonidae.reference-trees.nexus
test/data/unlabeled-trees/: unlabeled-rooted-n03.tre  unlabeled-rooted-n04.tre  unlabeled-rooted-n05.tre  unlabeled-rooted-n06.tre  unlabeled-rooted-n07.tre  unlabeled-rooted-n08.tre  unlabeled-rooted-n09.tre  unlabeled-rooted-n10.tre  unlabeled-rooted-n11.tre  unlabeled-rooted-n12.tre  unlabeled-rooted-n13.tre  unlabeled-rooted-n14.tre  unlabeled-rooted-n15.tre  unlabeled-unrooted-n04.tre  unlabeled-unrooted-n05.tre  unlabeled-unrooted-n06.tre  unlabeled-unrooted-n07.tre  unlabeled-unrooted-n08.tre  unlabeled-unrooted-n09.tre  unlabeled-unrooted-n10.tre  unlabeled-unrooted-n11.tre  unlabeled-unrooted-n13.tre  unlabeled-unrooted-n14.tre  unlabeled-unrooted-n16.tre  unlabeled-unrooted-n19.tre
test/scripts/: calc-multiset-symmetric-difference.py  calc-pairwise-tip-distances.py  calc-splits-distances.py  calc-subtree-leaf-set-sizes.py  calc-tree-ltt-distance.py  calc-tree-pairwise-profile-distance.py  calc-tree-unary-stats.py  calc-tree-unlabeled-symmetric-difference.py  check-coalescent-edge-lengths.py  check-lineage-spltting-times.py  check-lineage-through-time.py  generate-ultrametric-test-trees.py  run-tests.py
test/src/: canonical_reference_trees.cpp  labeled_symmetric_difference.cpp  lineage_accumulation_through_time.cpp  lineage_counts_through_time.cpp  lineage_splitting_through_time.cpp  lineage_splitting_time.cpp  lineage_through_time.cpp  pairwise_tip_distance.cpp  profile_comparison.cpp  profile_distances.cpp  profile_generation.cpp  pstrudel_testing.cpp  pstrudel_testing.hpp  read_dna_sequences.cpp  read_tree.cpp  read_trees.cpp  set_value_symmetric_difference.cpp  subtree_clade_sizes.cpp  subtree_leaf_set_sizes.cpp  supportlib.cpp  supportlib.hpp  symmetric_difference_of_multisets.cpp  testutils.cpp  testutils.hpp  tree_child_iter.cpp  tree_copy.cpp  tree_internal_iter.cpp  tree_leaf_iter.cpp  tree_ltt_distance.cpp  tree_pairwise_profile_distance.cpp  tree_pairwise_tip_distances.cpp  tree_postorder_iter.cpp  tree_preorder_iter.cpp  tree_reader.cpp  tree_splits_distances.cpp  tree_unary_stats.cpp  tree_unlabeled_symmetric_difference_distance.cpp
